# mibrel

./: .gitignore  Cargo.toml  Makefile  buf.gen.yaml  buf.yaml  bun.lockb  go.mod  go.sum  package.json  pnpm-lock.yaml  skaffold.yaml
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/manifests/: buildkit.yaml  deployment.yaml  registry.yaml
.devcontainer/zyreva/: devcontainer-feature.json  install.sh
cmd/zyreva/: zyreva.go
crates/nixpacks-ffi/: Cargo.toml  build.rs
crates/nixpacks-ffi/src/: lib.rs  nixpacks.udl
crates/server/: Cargo.toml  Dockerfile  Dockerfile.skaffold
crates/server/prisma/: schema.prisma
crates/server/src/: main.rs  router.rs
crates/server/src/entities/: application.rs  mod.rs  prelude.rs
crates/server/src/migrator/: m20220101_000001_create_table.rs  mod.rs
crates/server/src/router/: application.rs  mod.rs  project.rs
internal/pkg/api/: git.go  server.go
internal/pkg/buildpacks/: pack.go
internal/pkg/git/: git.go
internal/pkg/nixpacks/: pack.go
internal/pkg/tasks/: git.go  tasks.go
proto/zyreva/v1/: zyreva.proto
