[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
k8s = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { features = ["derive"], version = "1.0.188" }
rspc = { version = "0.1.3", features = ["axum"]  }
tower-http = { version = "0.4.4", features = ["cors"] }
tokio = { version = "1.32.0", default-features = false, features = ["full"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
clap = { version = "4.4.2", features = ["derive"] }
git2 = { version = "0.18.0", features = ["vendored-libgit2"] }
tempfile = "3"
tower = { version = "0.4.4", features = ["util", "filter"] }

[dev-dependencies]
diesel_cli = "*"
