[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
k8s = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { features = ["derive"], version = "1.0.188" }
rspc = { version = "0.1.3", features = ["axum"]  }
tower-http = { version = "0.4.4", features = ["cors"] }
tokio = { version = "1.32.0", default-features = false, features = ["full"] }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
sea-orm-migration = "0.12.2"
clap = { version = "4.4.2", features = ["derive"] }
git2 = { git = "https://github.com/rust-lang/git2-rs", rev = "c9250b401a80d196d93381804ed5598ca698e636", features = ["vendored-libgit2"] }
tempfile = "3"
tower = { version = "0.4.4", features = ["util", "filter"] }
nixpacks = "1.13.0"
bollard = { version = "0.14.0", features = ["buildkit"] }
async-stream = "0.3.5"
tokio-stream = "0.1.14"
kube = { version = "0.86.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }